--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: chatgpt-web
+  name: langegpt
   labels:
-    app: chatgpt-web
+    app: langegpt
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: chatgpt-web
+      app: langegpt
   strategy:
     type: RollingUpdate
   template:
     metadata:
       labels:
-        app: chatgpt-web
+        app: langegpt
     spec:
       containers:
-        - image: chenzhaoyu94/chatgpt-web
-          name: chatgpt-web
+        - image: chenzhaoyu94/langegpt
+          name: langegpt
           imagePullPolicy: Always
           ports:
             - containerPort: 3002
